apps/base/task-tracker/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: task-tracker
  labels:
    name: task-tracker
    app.kubernetes.io/name: task-tracker
    app.kubernetes.io/instance: task-tracker
    app.kubernetes.io/part-of: task-tracker
    app.kubernetes.io/component: namespace
    kubernetes.io/metadata.name: task-tracker
